tests/test_proof/good/output/enums.catala_en.Proof
[ERROR] The translation to Z3 failed:
TODO
[ERROR] The translation to Z3 failed:
TODO
[RESULT] A.y: no two exceptions to ever overlap for this variable
[RESULT] A.y: this variable never returns an empty error
